@@ -1457,18 +1457,23 @@ g_dump_gen(char *root)
   return ret.rt_m;
 }
 
-void
+int
 g_preproc_dm(char *name, __d_xref p_xref, unsigned char type, __std_rh aa_rh)
 {
   size_t s_l = strlen(name);
   s_l >= PATH_MAX ? s_l = PATH_MAX - 1 : s_l;
   strncpy(p_xref->name, name, s_l);
   p_xref->name[s_l] = 0x0;
+
+  int ret = 0;
+
   if (p_xref->flags & F_XRF_DO_STAT)
     {
       if (lstat(name, &p_xref->st))
         {
           bzero(&p_xref->st, sizeof(struct stat));
+          ret = 1;
+          print_str("ERROR: '%s': could not stat [%s]\n", name, strerror(errno));
         }
       else
         {
@@ -1540,6 +1545,8 @@ g_preproc_dm(char *name, __d_xref p_xref, unsigned char type, __std_rh aa_rh)
           p_xref->depth = (uint64_t) aa_rh->edsp->depth;
         }
     }
+
+  return ret;
 }
 
 int
@@ -1551,6 +1558,7 @@ g_xproc_m(unsigned char type, char *name, __std_rh aa_rh, __g_eds eds)
     }
 
   g_preproc_dm(name, &aa_rh->p_xref, type, aa_rh);
+
   if ((g_bmatch((void*) &aa_rh->p_xref, &aa_rh->hdl, &aa_rh->hdl.buffer)))
     {
       aa_rh->st_2++;
